[package]
name = "introspection-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { git = "https://github.com/async-graphql/async-graphql" }
async-graphql-poem = { git = "https://github.com/async-graphql/async-graphql" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
poem = "1.3.50"
once_cell = "1.16.0"
